package DesignPatterns.CommandPattern.Command;

public interface Command {
    void execute();
    void undo();
}
