package DesignPatterns.CommandPattern.Command.GarageDoorCommands;

import DesignPatterns.CommandPattern.Appliances.GarageDoor;
import DesignPatterns.CommandPattern.Command.Command;

public class GarageDoorCloseCommand implements Command {
    GarageDoor garageDoor;

    public GarageDoorCloseCommand(GarageDoor garageDoor) {
        this.garageDoor = garageDoor;
    }

    @Override
    public void execute() {
        garageDoor.down();
    }

    @Override
    public void undo() {
        garageDoor.up();
    }
}
