package DesignPatterns.CommandPattern.Command.StereoCommands;

import DesignPatterns.CommandPattern.Appliances.Stereo;
import DesignPatterns.CommandPattern.Command.Command;

public class StereoOffCommand implements Command {
    Stereo stereo;

    public StereoOffCommand(Stereo stereo) {
        this.stereo = stereo;
    }

    @Override
    public void execute() {
        stereo.off();
    }

    @Override
    public void undo() {
        stereo.on();
        stereo.setCD();
        stereo.setVolume(12);
    }
}
